kubernetes/platform/portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
  labels:
    aetheriscloud.fr/tier: internal
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
